plugins {
    id 'java'
    id 'war'
}

group 'com.darfik'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'


    implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
    implementation 'org.webjars:bootstrap:5.3.3'

    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
    implementation 'com.mysql:mysql-connector-j:8.3.0'

    implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
    implementation 'org.mindrot:jbcrypt:0.4'

    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
}

test {
    useJUnitPlatform()
}